Fix Warnings and broken CSS

--- a/src/index.css
+++ b/src/index.css
@@ -198,9 +198,9 @@ align-items: center;
   height: 670px;
   background: rgba(167,192,205,1);
   opacity: 1;
-  -position: absolute;
+  /*position: absolute;*/
   padding: 20px;
-  padding-left: 20;
+  /*padding-left: 20px;*/
   border-radius: 4px;
   overflow: hidden;
   float: left;
